--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /node_modules
 /.pnp
+/__pycache__
 .pnp.js
 
 # testing
@@ -17,6 +18,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.sqlite3
+*.pyc
 
 npm-debug.log*
 yarn-debug.log*
