--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /node_modules
 /.pnp
+__pycache__
 .pnp.js
 
 # testing
@@ -17,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+db.sqlite3
 
 npm-debug.log*
 yarn-debug.log*
